# aivika-experiment-chart

./: CHANGELOG.md  LICENSE  README.md  aivika-experiment-chart.cabal
Simulation/Aivika/Experiment/: Chart.hs  DeviationChartView.hs  FinalHistogramView.hs  FinalXYChartView.hs  HistogramView.hs  TimeSeriesView.hs  XYChartView.hs
Simulation/Aivika/Experiment/Chart/: ChartRenderer.hs  DeviationChartView.hs  FinalHistogramView.hs  FinalXYChartView.hs  HistogramView.hs  TimeSeriesView.hs  Types.hs  Utils.hs  XYChartView.hs
examples/: BassDiffusion.hs  ChemicalReaction.hs  DifferenceEquations.hs  Financial.hs  Furnace.hs  InspAdjtStations.hs  LinearArray.hs  MachRep3.hs  README  WorkflowLoop.hs
examples/BassDiffusion/: Experiment.hs  Model.hs  README
examples/BouncingBall/: Experiment.hs  MainUsingCairo.hs  MainUsingDiagrams.hs  Model.hs  README
examples/ChemicalReaction/: Experiment.hs  MainUsingCairo.hs  Model.hs  README
examples/DifferenceEquations/: Experiment.hs  MainUsingCairo.hs  MainUsingDiagrams.hs  Model.hs  README
examples/Financial/: Experiment.hs  MainUsingCairo.hs  MainUsingDiagrams.hs  Model.hs  README
examples/Furnace/: Experiment.hs  Model.hs  README
examples/GPSSExample7-26/: Experiment.hs  MainUsingCairo.hs  Model.hs  README
examples/GPSSExample7-31/: Experiment.hs  Model.hs
examples/InspectionAdjustmentStations/: Experiment.hs  Model.hs  README
examples/InventorySystem/: Experiment.hs  Model.hs  README
examples/LinearArray/: Experiment.hs  MainUsingCairo.hs  MainUsingDiagrams.hs  Model.hs  README
examples/MachRep3/: Experiment.hs  MainUsingDiagrams.hs  Model.hs  README
examples/MachineBreakdowns/: Experiment.hs  MainUsingCairo.hs  MainUsingDiagrams.hs  Model.hs  README
examples/PERT/: Experiment.hs  Model.hs  README
examples/PortOperations/: Experiment.hs  Model.hs  README
examples/QuarryOperations/: Experiment.hs  Model.hs  README
examples/SingleLaneTraffic/: Experiment.hs  MainUsingCairo.hs  MainUsingDiagrams.hs  Model.hs  README
examples/TruckHaulingSituation/: Experiment.hs  MainUsingDiagrams.hs  Model.hs  README
examples/TruckHaulingSituationVer2/: Experiment.hs  Model.hs  README
