name:            aivika-experiment-chart
version:         0.1
synopsis:        Simulation experiments with charting for the Aivika library
description:
    This package complements the Aivika and Aivika Experiment packages with
    charting capabilites. Now the simulation results can be represented
    as charts.
    .
    It was intentionally made a separate package as it has heavy dependencies
    on Haskell Charts, Cairo and GTK.
    .
category:        Simulation
license:         BSD3
license-file:    LICENSE
copyright:       (c) 2012. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://github.com/dsorokin/aivika-experiment-chart
cabal-version:   >= 1.2.0
build-type:      Simple
tested-with:     GHC == 7.4.1

extra-source-files:  examples/MachRep1.hs

library

    exposed-modules: Simulation.Aivika.Experiment.TimeSeriesView

    build-depends:   base >= 3 && < 6,
                     mtl >= 1.1.0.2,
                     array >= 0.3.0.0,
                     containers >= 0.4.0.0,
                     filepath >= 1.3.0.0,
                     chart >= 0.16,
                     aivika >= 0.4.3,
                     aivika-experiment >= 0.1

    ghc-options:     -O2
