name:            aivika-experiment-chart
version:         1.0
synopsis:        Simulation experiments with charting for the Aivika library
description:
    This package complements the Aivika and Aivika Experiment packages with
    charting capabilites. Now the simulation results can be represented
    as charts.
    .
    It was intentionally made a separate package as it has heavy dependencies
    on Haskell Charts, Cairo and GTK.
    .
category:        Simulation
license:         GPL
license-file:    LICENSE
copyright:       (c) 2012-2014. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://github.com/dsorokin/aivika-experiment-chart
cabal-version:   >= 1.2.0
build-type:      Simple
tested-with:     GHC == 7.6.3

extra-source-files:  examples/MachRep3.hs
                     examples/ChemicalReaction.hs
                     examples/BassDiffusion.hs
                     examples/Financial.hs
                     examples/DifferenceEquations.hs
                     examples/Furnace.hs
                     examples/LinearArray.hs
                     examples/README

library

    exposed-modules: Simulation.Aivika.Experiment.TimeSeriesView
                     Simulation.Aivika.Experiment.XYChartView
                     Simulation.Aivika.Experiment.FinalXYChartView
                     Simulation.Aivika.Experiment.DeviationChartView
                     Simulation.Aivika.Experiment.HistogramView
                     Simulation.Aivika.Experiment.FinalHistogramView
                     Simulation.Aivika.Experiment.Chart

    build-depends:   base >= 3 && < 6,
                     mtl >= 1.1.0.2,
                     array >= 0.3.0.0,
                     containers >= 0.4.0.0,
                     filepath >= 1.3.0.0,
                     Chart >= 1.2,
                     Chart-cairo >= 1.2,
                     split >= 0.2.2,
                     lens >= 3.9,
                     data-default-class < 0.1,
                     colour >= 2.3.3,
                     aivika >= 1.0,
                     aivika-experiment >= 1.0

    ghc-options:     -O2
