name:            aivika-experiment-chart
version:         1.3
synopsis:        Simulation experiments with charting for the Aivika library
description:
    This package complements the Aivika and Aivika Experiment packages with
    charting capabilites. Now the simulation results can be represented
    as charts.
    .
    Nevertheless, to plot the charts, you hould use one of the rendering backends
    provided by packages Aivika Experiment Cairo or Aivika Experiment Diagrams.
    While the Cairo backend suits mostly to Linux and partially OS X, the Diagrams 
    backend is mainly destined for MS Windows, although it should work on Linux 
    and OS X too.
    .
category:        Simulation
license:         BSD3
license-file:    LICENSE
copyright:       (c) 2012-2014. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://github.com/dsorokin/aivika-experiment-chart
cabal-version:   >= 1.2.0
build-type:      Simple
tested-with:     GHC == 7.6.3

library

    exposed-modules: Simulation.Aivika.Experiment.Chart
                     Simulation.Aivika.Experiment.Chart.ChartRenderer
                     Simulation.Aivika.Experiment.Chart.TimeSeriesView
                     Simulation.Aivika.Experiment.Chart.XYChartView
                     Simulation.Aivika.Experiment.Chart.FinalXYChartView
                     Simulation.Aivika.Experiment.Chart.DeviationChartView
                     Simulation.Aivika.Experiment.Chart.HistogramView
                     Simulation.Aivika.Experiment.Chart.FinalHistogramView
                     Simulation.Aivika.Experiment.Chart.Utils

    build-depends:   base >= 3 && < 6,
                     mtl >= 1.1.0.2,
                     array >= 0.3.0.0,
                     containers >= 0.4.0.0,
                     filepath >= 1.3.0.0,
                     Chart >= 1.2,
                     split >= 0.2.2,
                     lens >= 3.9,
                     data-default-class < 0.1,
                     colour >= 2.3.3,
                     aivika >= 1.2.1,
                     aivika-experiment >= 1.3

    extensions:      FlexibleInstances,
                     MultiParamTypeClasses

    ghc-options:     -O2
